--- a/css/sasstest.css
+++ b/css/sasstest.css
@@ -109,7 +109,8 @@ header {
         position: absolute;
         top: var(--nav-height);
         left: 0;
-        background: #ffffffbd; }
+        background: #ffffff;
+        border: 1px solid #e2e2e2; }
         #desktop-nav .lvl1 > li .lvl2 > li {
           padding: 0 5px;
           text-align: left;
@@ -307,8 +308,14 @@ header {
     padding: 40px 0 40px; }
 
 footer {
-  height: 300px;
   background: var(--blue); }
+  footer .footer-content {
+    width: 100%;
+    display: inline-block;
+    color: white;
+    margin: 0 auto;
+    padding: 40px 15px;
+    text-align: center; }
 
 /*DESKTOP*/
 /*DESKTOP ENDS*/
@@ -379,7 +386,7 @@ footer {
         #mobile-nav .lvl1 > li:last-child {
           border: none; }
         #mobile-nav .lvl1 > li.open .lvl2 {
-          display: block; }
+          display: none; }
         #mobile-nav .lvl1 > li .lvl2 {
           display: none;
           transition: 1s; }
