--- a/css/style.scss
+++ b/css/style.scss
@@ -18,7 +18,6 @@ $height: 100px;
     --font-family-body: 'Tajawal', sans-serif;
     --font-family-title: 'Kotta One', serif;
     --font-family-extra: 'Karla', sans-serif;
-
 }
 
 html{
@@ -37,7 +36,7 @@ a{
     color: var(--font-color);
     text-decoration: none;
     &:visited{
-    color: var(--font-color);
+        color: var(--font-color);
     }
 }
 
@@ -60,6 +59,7 @@ header{
     width: 100%;
     background-color: #ededed; //var(--light-blue);
 }
+
 
 #top-bar{
     display: inline-block;
@@ -132,7 +132,8 @@ header{
                 position:absolute;
                 top: var(--nav-height);
                 left: 0; 
-                background: #ffffffbd;
+                background: #ffffff;
+                border: 1px solid rgb(226, 226, 226);
                 >li{
                     padding: 0 5px;
                     text-align: left;
@@ -213,9 +214,9 @@ header{
                 font-size: 12px;
             }
         }
-    }
-    
+    }  
 }
+
 .brand-area{
     .brand-wrapper{
         max-width: 1200px;
@@ -411,10 +412,17 @@ header{
 
 
 
-
+// Footer
 footer{
-    height: 300px;
     background: var(--blue);
+    .footer-content{
+        width: 100%;
+        display: inline-block;
+        color: white;
+        margin: 0 auto;
+        padding: 40px 15px;
+        text-align: center;
+    }   
 }
 
 
@@ -510,7 +518,7 @@ footer{
                 &.open{
                     
                     .lvl2{
-                        display: block;
+                        display: none;
                     }
                 }
                 /*LVL2*/
